--- a/sutairu/src/pages/createdesign.css
+++ b/sutairu/src/pages/createdesign.css
@@ -82,7 +82,9 @@
     width: 90%;
     gap: 10px;
   }
-  
+  .img-scene {
+    padding-left: 40px;
+  }
   .button-row {
     display: flex;
     justify-content: center;
