--- a/sutairu/src/pages/home.css
+++ b/sutairu/src/pages/home.css
@@ -26,7 +26,12 @@
     flex-direction: column;
     align-items: center;
   }
-  .img-three{
+
+  .img-three {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* Ajoutez d'autres styles si nécessaire */
   }
   
   @media (max-width: 768px) {
