--- a/sutairu/src/pages/inscription.css
+++ b/sutairu/src/pages/inscription.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     flex: 1;
-    align-items: start;
+    align-items: flex-start;
     gap: 20px;
     min-height: 100vh;
   }
