--- a/sutairu/src/index.css
+++ b/sutairu/src/index.css
@@ -8,6 +8,12 @@ body {
     -moz-osx-font-smoothing: grayscale;
   }
   
+  .testroot{
+    /* display: flex; */
+    height: 100vh;
+    overflow: hidden;
+
+  }
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
