--- a/sutairu/src/pages/mesdesign.css
+++ b/sutairu/src/pages/mesdesign.css
@@ -104,6 +104,7 @@
   .container .child {
     width: 100%;
     flex: 1;
+    padding-left: 5%;
   }
   .child :nth-child(1) {
     min-width: 120px;
@@ -115,6 +116,8 @@
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 300px;
+    margin-top: 6%;
+    margin-right: 5%;
   }
   
   .payment-options {
@@ -157,12 +160,13 @@
     background-color: #cfc3c3;
     border: none;
     padding: 10px;
-    width: 60%;
+    width: 30%;
     border-radius: 20px;
     cursor: pointer;
     font-size: 16px;
     color: #000000;
     font-weight: bold;
+    margin-left: 20%;
   }
   
   .pay-button:hover {
