--- a/sutairu/src/pages/mesdesign.css
+++ b/sutairu/src/pages/mesdesign.css
@@ -25,7 +25,8 @@
     margin-left: 30px; /* Spacing from product name */
   }
   
-  .CardItem .sizePrice {
+  .CardItem .ajouterBtn {
+    font-size: 15px;
   }
   
   .CardItem .deleteIcon {
@@ -39,11 +40,15 @@
     border-radius: 8px;
     padding: 10px;
     margin-bottom: 20px; /* Spacing between cart items */
+    width: 1000px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .CardItem img {
     width: 100px;
-    height: auto;
+    height: 90px;
     margin-right: 30px; /* Gap between 1st element (image) and 2nd element (product name) */
   }
   
@@ -89,11 +94,11 @@
     line-height: 31px;
   }
   .sizePrice :nth-child(1) {
-    font-size: 20px;
+    font-size: 15px;
   }
   
   .sizePrice :nth-child(2) {
-    font-size: 32px;
+    font-size: 20px;
     line-height: 42px;
   }
   
@@ -107,7 +112,7 @@
     padding-left: 5%;
   }
   .child :nth-child(1) {
-    min-width: 120px;
+    min-width: 100px;
   }
   
   .payment-form {
@@ -143,12 +148,19 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
-  
-  .form-group {
     margin-bottom: 10px;
   }
+
+  .country{
+    height: 35px;
+  }
   
+  .card-text {
+    text-align: left;
+  }
+  .placeholder {
+    margin-left: 20px;
+  }
   .form-group input,
   .form-group select {
     border: 1px solid #ccc;
@@ -174,7 +186,7 @@
   }
   
   h1 {
-    font-size: 24px;
+    font-size: 20px;
     line-height: 31px;
     font-weight: 700;
     color: #7d4f50;
@@ -189,7 +201,7 @@
   }
   
   .voir-le-panier {
-    margin-right: 0;
+    margin-right: 15%;
   }
   
   .button-container {
@@ -201,21 +213,23 @@
   .prixBtn {
     color: black;
     font-weight: 400;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 20px;
+    line-height: 25px;
     border: 2px solid #7d4f50;
     margin-top: 0;
     min-width: 250px;
+    margin-right: 20%;
   }
   
   .commanderBtn {
     color: #7d4f50;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 32px;
+    font-size: 20px;
+    line-height: 25px;
     border: 3px solid #7d4f50;
     margin-top: 0;
     min-width: 250px;
+    margin-right: 20%;
   }
   
   .cartsPart {
