--- a/sutairu/src/pages/moncolis.css
+++ b/sutairu/src/pages/moncolis.css
@@ -5,6 +5,10 @@
     padding: 20px;
     background-color: #f7f3f5;
     border-radius: 11px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
   }
   
   .process-step {
@@ -17,8 +21,8 @@
   .process-icon {
     background-color: #7d4f50;
     border-radius: 50%;
-    width: 182px;
-    height: 182px;
+    width: 120px;
+    height: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,7 +34,7 @@
   }
   
   .process-icon img {
-    width: 50%;
+    width: 40%;
   }
   
   .process-text {
@@ -48,9 +52,18 @@
   }
   
   h2 {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
     color: #7d4f50;
+  }
+
+  .titre {
+    margin-left: 15%;
+    text-decoration: underline;
+    margin-top: 60px;
+    margin-bottom: 40px;
+    font-size: 20px;
+    font-weight: 700;
   }
   
   .footpart button {
@@ -65,5 +78,6 @@
     color: #7d4f50;
     text-decoration: underline;
     margin-top: 5px;
+    margin-left: 13%;
   }
   
