--- a/sutairu/src/components/cardItemCommandes.css
+++ b/sutairu/src/components/cardItemCommandes.css
@@ -5,8 +5,8 @@
   }
   .CardItemCommandes {
     /* border: solid #7d4f50; */
-    background-color: #f7f3f5;
-    border: 2px solid #7d4f50;
+    background-color: #f1f1f1;
+    border: 2px solid #0E4A65;
   }
   
   .CardItemCommandes img {
