--- a/sutairu/src/pages/home.css
+++ b/sutairu/src/pages/home.css
@@ -102,8 +102,8 @@
   
   .customLink {
     padding: 10px 70px;
-    border: 2px solid #7d4f50;
-    background-color: #f7f3f5;
+    border: 2px solid #0E4A65;
+    background-color: #ffffff;
     color: #000;
     font-size: 16px;
     cursor: "pointer";
@@ -125,6 +125,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 26px;
+    color: white;
   }
   
   .division {
