❌ erreur connexion afficher

--- a/sutairu/src/pages/inscription.css
+++ b/sutairu/src/pages/inscription.css
@@ -5,6 +5,10 @@
   gap: 20px;
   min-height: 100vh;
 }
+.error-message{
+  color: red;
+  font-size: small;
+}
 
 /* .image-section {
   flex: 0 1 auto;
