--- a/sutairu/src/pages/inscription.css
+++ b/sutairu/src/pages/inscription.css
@@ -6,21 +6,22 @@
     min-height: 100vh;
   }
   
-  /* .image-section {
-    flex: 0 1 auto;
-    width: calc(84% / 100 * 300px);
-    height: 300px;
-    background-color: #f0f0f0;
-    background-size: cover;
-    background-position: center;
-  } */
-  
   .inscription-section {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5px;
+    margin-top: 5%;
+  }
+
+  .connection-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    margin-top: 10%;
   }
   
   /* Display the image when the screen size is 900px or wider */
@@ -37,6 +38,13 @@
     padding-bottom: 30px;
   }
   
+  .connection-section h2 {
+    font-weight: 400;
+    color: #000000;
+    font-size: 48px;
+    line-height: 63px;
+    padding-bottom: 30px;
+  }
   .input-group label {
     font-weight: 400;
     font-size: 16px;
