--- a/sutairu/src/index.css
+++ b/sutairu/src/index.css
@@ -11,9 +11,19 @@ body {
   .testroot{
     /* display: flex; */
     height: 100vh;
-    overflow: hidden;
-
+    
   }
+  @media screen and (max-width:768px){
+    .mainDiv{
+
+    height: 100% !important;
+    }    
+    .container{
+
+      height: 100% !important;
+      }
+  }
+
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
