--- a/sutairu/src/pages/inscription.css
+++ b/sutairu/src/pages/inscription.css
@@ -1,4 +1,4 @@
-.container {
+.containertest {
     display: flex;
     flex: 1;
     align-items: flex-start;
@@ -23,7 +23,17 @@
     gap: 5px;
     margin-top: 10%;
   }
-  
+
+  .text-mdp{
+    font-size: 30px;
+    color: #000;
+    padding-bottom: 10px;
+  }
+
+  .input-mdp label {
+    font-size: 25px;
+    color: #000000;
+  }
   /* Display the image when the screen size is 900px or wider */
 @media (min-width: 900px) {
   .responsive-img {
@@ -63,7 +73,7 @@
     border-radius: 27px;
   }
   
-  button {
+  .button {
     padding: 10px 40px;
     background-color: #000000;
     color: white;
@@ -76,6 +86,17 @@
     line-height: 26px;
   }
   
+  .button-mdp{
+    padding: 10px 40px;
+    color: black;
+    border: none;
+    cursor: pointer;
+    margin-top: 45px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    background-color: transparent;
+  }
   .text {
     font-size: 14px;
     line-height: 18px;
