--- a/sutairu/src/pages/mesdesign.css
+++ b/sutairu/src/pages/mesdesign.css
@@ -15,8 +15,8 @@
   }
 
   .canvas-container {
-    width: 110px; /* Ajustez cette valeur selon vos besoins */
-    height: 110px; /* Ajustez cette valeur selon vos besoins */
+    width: 110px; 
+    height: 110px; 
     position:relative; 
   }
   
