--- a/sutairu/src/pages/mesdesign.css
+++ b/sutairu/src/pages/mesdesign.css
@@ -222,9 +222,17 @@
     background-color: #bbb;
   }
   
-  h1 {
+  h3 {
+    margin-left: 20%;
+    margin-right: 30%;
     font-size: 20px;
-    line-height: 31px;
+    font-weight: 400;
+    color: #000000;
+  }
+  h1 {
+    text-align: center;
+    font-size: 10px;
+    line-height: 10px;
     font-weight: 700;
     color: #000000;
     text-decoration: underline;
