--- a/sutairu/src/pages/monpanier.css
+++ b/sutairu/src/pages/monpanier.css
@@ -62,7 +62,7 @@
   justify-content: space-between;
   border-radius: 8px;
   padding: 10px;
-  margin-bottom: 20px; /* Spacing between cart items */
+  margin-bottom: 10px; 
   width: 1000px;
   height: 100px;
   margin-left: auto;
@@ -79,7 +79,13 @@
   display: flex;
   align-items: center;
 }
-
+h3 {
+  margin-left: 20%;
+  margin-right: 30%;
+  font-size: 20px;
+  font-weight: 400;
+  color: #000000;
+}
 .rightSide {
   display: flex;
   align-items: center;
